# lab5_prog

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Dust.cpp  Dust.hpp  Physics.cpp  Physics.h  World.cpp  World.h
.github/workflows/: release.yml
